Fix menu overlap with daily quotes https://github.com/Siderite/lichessTools/issues/922

--- a/tools/dailyQuote/tool.css
+++ b/tools/dailyQuote/tool.css
@@ -6,7 +6,7 @@
 
 }
 
-@media (prefers-reduced-motion: no-preference) and (min-height: 600px) {
+@media (min-height: 600px) and (min-width: 799.3px) {
   body.lichessTools:has(.lichessTools-dailyQuote) #main-wrap {
     margin-top: 0;
   }
